[package]
name = "gl_generator_profiling_struct"
version = "0.1.1"
authors = ["Nerijus Arlauskas <nercury@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "ProfilingStructGenerator for gl_generator"
repository = "https://github.com/Nercury/gl_generator_profiling_struct-rs"
keywords = ["open_gl", "gl", "profiling", "debug"]
categories = ["api-bindings", "rendering::graphics-api"]

[dependencies]
gl_generator = { version = "0.9", features = ["unstable_generator_utils"] }

