[package]
name = "gl_generator_profiling_struct"
version = "0.1.2"
authors = ["Nerijus Arlauskas <nercury@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "ProfilingStructGenerator for gl_generator"
repository = "https://github.com/Nercury/gl_generator_profiling_struct-rs"
keywords = ["open_gl", "gl", "profiling", "debug"]
categories = ["api-bindings", "rendering::graphics-api"]
documentation = "https://docs.rs/gl_generator_profiling_struct"
edition = "2018"

[dependencies]
gl_generator = { version = "0.14.0", features = ["unstable_generator_utils"] }

